# counterbot

./: .gitignore  .rustfmt.toml  Cargo.toml  deploy-debug.sh  deploy-stage.sh  massif.out.14431  massif.out.14435  test-cfg.toml  test-counts.toml
src/: botframe.rs  main.rs
