[package]
name = "counterbot"
version = "0.1.0-dev"
authors = ["Balint BIRO <j.balint.biro@gmail.com>"]
edition = "2018"

[dependencies]
irc = "0.13"
smallstr = { version = "0.1", features = ["serde"] }
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
tempfile = "3"
chrono = "0.4"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

